test/types/range/lydia/badRange-string-multi.good
badRange-string-multi.chpl:1: In function 'main':
badRange-string-multi.chpl:2: error: Range bounds must be of compatible types (lower bound is not)
badRange-string-multi.chpl:2: error: Range bounds must be of compatible types (upper bound is not)
badRange-string-multi.chpl:2: error: lower bound and stride of param for loop expected to be of the same type
badRange-string-multi.chpl:2: error: upper bound and stride of param for loop expected to be of the same type
